--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "antd": "^5.22.5",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
@@ -18,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-signalr": "^0.2.24",
+    "uuid": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
